--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -15,8 +15,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Run unit tests
+      - name: Black
+        run: black
+      - name: Bandit
+        run: bandit
+      - name: Tests
         run: pytest
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
