add path for black and bandit

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -16,9 +16,9 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Black
-        run: black
+        run: black .
       - name: Bandit
-        run: bandit
+        run: bandit .
       - name: Tests
         run: pytest
 
