--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -15,11 +15,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Black
+      - name: black
         run: black --check app tests
-      - name: Bandit
+      - name: isort
+        run: isort --check app tests
+      - name: bandit
         run: bandit -r app tests
-      - name: Tests
+      - name: tests
         run: pytest
 
   deploy:
