--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -15,13 +15,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: black
+      - name: Check code formatting (black)
         run: black --check app tests
-      - name: isort
+      - name: Check imports ordering (isort)
         run: isort --check app tests
-      - name: bandit
+      - name: SAST (bandit)
         run: bandit -r app tests
-      - name: tests
+      - name: Unit tests (pytest)
         run: pytest
 
   deploy:
