--- a/.github/workflows/pr-build-deploy.yaml
+++ b/.github/workflows/pr-build-deploy.yaml
@@ -1,4 +1,4 @@
-name: dev
+name: pr-build-deploy
 
 on: pull_request
 
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements/test.txt
       - name: Check code formatting (black)
         run: black --check app tests
       - name: Check imports ordering (isort)
@@ -24,7 +24,7 @@ jobs:
       - name: Unit tests (pytest)
         run: pytest
 
-  deploy:
+  deploy-dev:
     needs: build
     runs-on: ubuntu-latest
     steps:
