--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -20,3 +20,11 @@ jobs:
         run: sls config credentials --provider aws --key ${{ secrets.PROD_ACCESS_KEY_ID }} --secret ${{ secrets.PROD_SECRET_ACCESS_KEY }}
       - name: Deploy app on AWS
         run: sls deploy --stage prod
+  notify-slack:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
