--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -17,14 +17,11 @@ jobs:
       - name: Install Serverless framework
         run: npm install -g serverless
       - name: Serverless AWS authentication
-        run: sls config credentials --provider aws --key ${{ secrets.PROD_ACCESS_KEY_ID }} --secret ${{ secrets.PROD_SECRET_ACCESS_KEY }}
+        run: sls config credentials --provider aws --key ${{ asdf }} --secret ${{ secrets.PROD_SECRET_ACCESS_KEY }}
       - name: Deploy app on AWS
         run: sls deploy --stage prod
-  notify-slack:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_COLOR: ${{ job.status }}
