--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -27,4 +27,4 @@ jobs:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_COLOR: ${{ job.status }}
           SLACK_USERNAME: github-alerts
-          SLACK_ICON_EMOJI: :bell:
+          SLACK_ICON_EMOJI: ":bell:"
