--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -17,3 +17,12 @@ jobs:
         run: sls config credentials --provider aws --key ${{ secrets.STAGING_ACCESS_KEY_ID }} --secret ${{ secrets.STAGING_SECRET_ACCESS_KEY }}
       - name: Deploy app on AWS
         run: sls deploy --stage staging
+      - name: Slack Notification
+        if: always()
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_CHANNEL: staging-deployments
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_COLOR: ${{ job.status }}
+          SLACK_USERNAME: github-alerts
+          SLACK_ICON_EMOJI: ":bell:"
