--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Serverless framework
         run: npm install -g serverless
       - name: Serverless AWS authentication
-        run: sls config credentials --provider aws --key ${{ secrets.PROD_ACCESS_KEYY_ID }} --secret ${{ secrets.PROD_SECRET_ACCESS_KEY }}
+        run: sls config credentials --provider aws --key ${{ secrets.PROD_ACCESS_KEY_ID }} --secret ${{ secrets.PROD_SECRET_ACCESS_KEY }}
       - name: Deploy app on AWS
         run: sls deploy --stage prod
       - name: Slack Notification
